Created a "Speedometer" sample by modifying the "Clock"

--- a/samples/index.html
+++ b/samples/index.html
@@ -32,6 +32,9 @@
                     <div class="samples-entry">
                         <a class="title" href="gauge-datalabels.html">Gauge with datalabels-plugin</a>
                     </div>
+					<div class="samples-entry">
+                        <a class="title" href="gauge-clock.html">Gauge clock</a>
+                    </div>
                     <div class="samples-entry">
                         <a class="title" href="gauge-datalabels-labels.html">Gauge with datalabels-plugin displaying labels</a>
                     </div>
