Update welcome page menu

--- a/samples/index.html
+++ b/samples/index.html
@@ -33,7 +33,7 @@
                         <a class="title" href="gauge-datalabels.html">Gauge with datalabels-plugin</a>
                     </div>
 					<div class="samples-entry">
-                        <a class="title" href="gauge-clock.html">Gauge clock</a>
+                        <a class="title" href="gauge-speedometer.html">Speedometer</a>
                     </div>
                     <div class="samples-entry">
                         <a class="title" href="gauge-datalabels-labels.html">Gauge with datalabels-plugin displaying labels</a>
